add header desktop and mobile mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,4 +6,10 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: auto;
+  font-family: "Montserrat", sans-serif;
+}
+
+* {
+  box-sizing: border-box;
 }
