--- a/src/components/common/BackgroundCarousel/BackgroundCarousel.scss
+++ b/src/components/common/BackgroundCarousel/BackgroundCarousel.scss
@@ -15,6 +15,8 @@
 
     .background-carousel-img {
       height: 100%;
+      width: 100%;
+      object-fit: cover;
       position: absolute;
       top: 50%;
       left: 50%;
