--- a/src/components/pages/Calculator/Calculator.scss
+++ b/src/components/pages/Calculator/Calculator.scss
@@ -1,3 +1,14 @@
 .calculator-page {
-  padding-top: 80px;
+  padding: 100px 30px 20px 30px;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+
+  .calculator {
+    display: flex;
+    flex: 1;
+    padding: 20px;
+  }
 }
