--- a/src/components/pages/Calculator/OfferSummery/OfferSummery.scss
+++ b/src/components/pages/Calculator/OfferSummery/OfferSummery.scss
@@ -1,3 +1,146 @@
 .offer-summery {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding-left: 40px;
+
+  .offer-summery-table {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    font-size: 13px;
+
+    .offer-summery-table-header {
+      font-weight: bold;
+    }
+
+    .offer-summery-row {
+      flex: 1;
+      display: flex;
+      padding: 6px 0px;
+
+      .offer-summery-cell {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        p {
+          margin: 0;
+        }
+      }
+    }
+  }
+
+  .total-title {
+    font-size: 16px;
+    margin-top: 20px;
+    padding-left: 12px;
+    span {
+      padding: 2px 10px;
+      background: black;
+      color: white;
+      border-radius: 10px;
+    }
+    &::before {
+      top: 10px;
+    }
+  }
+
+  .offer-summery-make-purchase {
+    display: flex;
+    margin-top: auto;
+  }
+
+  .cart-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    background: black;
+    border-radius: 6px;
+    box-shadow: 0 5px 25px -10px transparent;
+    transition: box-shadow 0.3s ease;
+    margin-left: auto;
+    width: 130px;
+
+    transition: width 0.3s ease;
+
+    &:hover {
+      box-shadow: 0 5px 25px -10px #000;
+    }
+
+    .cart-button-icon {
+      background: #ffb800;
+      padding: 3px;
+      width: 40px;
+      height: 40px;
+      border-radius: 5px;
+    }
+
+    .cart-button-text {
+      font-size: 14px;
+      width: 80px;
+      margin: 0;
+      margin-left: auto;
+      color: white;
+      cursor: default;
+    }
+
+    .cart-button-text-container {
+      width: 80px;
+      position: relative;
+      margin-left: auto;
+      height: 100%;
+      perspective: 1000px;
+
+      .cart-button-text {
+        position: absolute;
+        top: 2px;
+        left: 0;
+        font-size: 14px;
+        width: 80px;
+        margin: 0;
+        transform-origin: top;
+        transform: rotateX(0deg);
+
+        color: white;
+        cursor: default;
+        opacity: 1;
+        width: 70px;
+
+        transition: transform 0.5s ease, opacity 0.3s ease;
+
+        &.cart-button-send {
+          transform-origin: bottom;
+          transform: rotateX(-90deg);
+          text-align: center;
+          opacity: 0;
+          top: 4px;
+          padding: 4px;
+          border-radius: 4px;
+          border: 3px solid #ffb800;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+
+  .cart-button-open {
+    width: 350px;
+    .cart-button-text-container {
+      .cart-button-text {
+        opacity: 0;
+
+        &.cart-button-send {
+          opacity: 1;
+          transform: rotateX(0deg);
+        }
+      }
+
+      .cart-button-order {
+        transform: rotateX(90deg);
+      }
+    }
+  }
 }
