Added single page

--- a/src/components/pages/Products/TabPanelArticle/TabPanelArticle.scss
+++ b/src/components/pages/Products/TabPanelArticle/TabPanelArticle.scss
@@ -29,3 +29,14 @@
     }
   }
 }
+
+.three-element-row {
+  width: 350px;
+  min-width: unset;
+
+  .article-inner-container {
+    img {
+      width: 310px;
+    }
+  }
+}
