--- a/src/components/pages/Products/TabPanelContent/TabPanelContent.scss
+++ b/src/components/pages/Products/TabPanelContent/TabPanelContent.scss
@@ -9,7 +9,7 @@
     padding-right: 0px;
   }
 
-  img{
-    box-shadow: 0 5px 25px -10px #000
+  img {
+    box-shadow: 0 5px 25px -10px #000;
   }
 }
