--- a/src/components/pages/Contact/Contact.scss
+++ b/src/components/pages/Contact/Contact.scss
@@ -1,7 +1,20 @@
 .contact-page {
-  width: 100%;
-  height: 100%;
-  padding-top: 80px;
   background: rgba(0, 0, 0, 0.6);
   color: white;
+
+  width: 100%;
+  height: 100%;
+  padding: 100px 100px 40px 100px;
+
+  display: flex;
+  flex-direction: column;
+
+  .contact-page-title {
+    span {
+      background: unset;
+    }
+    &::before {
+      width: calc(100% - 190px);
+    }
+  }
 }
