--- a/src/components/pages/Portfolio/Portfolio.scss
+++ b/src/components/pages/Portfolio/Portfolio.scss
@@ -1,7 +1,7 @@
 .portfolio-page {
   width: 100%;
   height: 100%;
-  padding: 80px 100px 40px 100px;
+  padding: 100px 100px 40px 100px;
 
   display: flex;
   flex-direction: column;
@@ -11,6 +11,7 @@
     overflow: auto;
     padding: 10px;
     display: flex;
+    margin-top: 15px;
   }
 
   .portfolio-page-img-container {
