--- a/src/components/pages/Products/TabPanelArticle/TabPanelArticle.scss
+++ b/src/components/pages/Products/TabPanelArticle/TabPanelArticle.scss
@@ -1,13 +1,15 @@
 .article-container {
   display: flex;
-  flex: 1;
+
   min-width: 400px;
-  width: 600px;
+  width: 100%;
   max-width: 600px;
   padding-right: 25px;
 
   .article-inner-container {
     flex-direction: column;
+    width: 100%;
+    padding: 10px;
 
     img {
       max-width: 500px;
