--- a/src/components/pages/SinglePage/SinglePage.scss
+++ b/src/components/pages/SinglePage/SinglePage.scss
@@ -95,6 +95,7 @@
 
         .detail-row_content-calculator {
           display: flex;
+          cursor: pointer;
 
           .detail-row_content-calculator__container {
             width: 60px;
