--- a/src/components/pages/Automatizari/Product/Product.scss
+++ b/src/components/pages/Automatizari/Product/Product.scss
@@ -55,10 +55,15 @@
 
   ul {
     margin-bottom: 20px;
+    max-width: 520px;
   }
 
   li {
     margin-bottom: 5px;
   }
 
+}
+
+.product.last {
+  margin-bottom: 0;
 }
