--- a/src/components/common/BackgroundCarousel/BackgroundCarousel.scss
+++ b/src/components/common/BackgroundCarousel/BackgroundCarousel.scss
@@ -1,7 +1,6 @@
 .background-carousel-container {
   width: 100%;
-  height: 100%;
-  overflow: auto;
+  height: 750px;
   position: relative;
 
   .background-carousel {
