--- a/src/components/pages/Contact/ContactForm/ContactForm.scss
+++ b/src/components/pages/Contact/ContactForm/ContactForm.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 30px;
-  max-width: 600px;
+  width: 450px;
   color: white;
 
   .contact-form__row {
