--- a/src/components/common/Images/Images.scss
+++ b/src/components/common/Images/Images.scss
@@ -1,7 +1,7 @@
 .images {
   width: 100%;
   height: 100%;
-  padding: 100px 100px 40px 100px;
+  padding-bottom: 40px;
 
   display: flex;
   flex-direction: column;
