--- a/src/components/pages/Calculator/Cart/Cart.scss
+++ b/src/components/pages/Calculator/Cart/Cart.scss
@@ -1,38 +1,50 @@
 .cart-container {
-  width: 350px;
-  position: absolute;
-  bottom: 40px;
-  left: 0;
-  background: rgba(255, 255, 255, 0.9);
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s ease;
+  display: flex;
+  margin: 10px;
+  padding: 10px;
+  background: #ffb800;
+  border-radius: 10px;
+  align-items: center;
+  cursor: default;
+  height: 50px;
 
-  .cart-field-icon {
-    align-self: flex-end;
+  p {
+    margin: 0;
+    cursor: default;
   }
 
-  .cart-text-area {
-    width: 100%;
-    margin-top: 15px;
-    margin-bottom: 5px;
-    padding: 5px;
-    outline: none;
-  }
-
-  .cart-field {
-    width: 100%;
-    display: flex;
-    margin-bottom: 15px;
-  }
-
-  .cart-field-input {
-    flex: 1;
+  .cart-text {
     margin-left: 10px;
   }
 
-  &.cart-container-open {
-    opacity: 1;
-    pointer-events: initial;
+  .cart-nr-of-items {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+
+    border-radius: 50%;
+    border-bottom-right-radius: 0px;
+    background: black;
+    position: relative;
+    transform: translate(6px, -4px);
+
+    p {
+      color: #ffb800;
+    }
+
+    .go-to-cart-page {
+      position: absolute;
+      padding: 2px 4px;
+      top: 21px;
+      right: 0;
+      font-size: 12px;
+      width: 70px;
+      background-color: black;
+      border-radius: 4px;
+      border-top-right-radius: 0px;
+    }
   }
 }
