--- a/src/components/pages/Calculator/Calculator.scss
+++ b/src/components/pages/Calculator/Calculator.scss
@@ -9,11 +9,17 @@
   .calculator {
     display: flex;
     flex: 1;
-    padding: 20px;
+    padding-top: 20px;
+    overflow: hidden;
   }
 
   .calculator-page-title {
     font-weight: normal;
     margin: 10px 0px;
+  }
+
+  .calculator-side-wrapper {
+    display: flex;
+    flex-direction: column;
   }
 }
