--- a/src/components/common/BackgroundCarousel/BackgroundCarousel.scss
+++ b/src/components/common/BackgroundCarousel/BackgroundCarousel.scss
@@ -1,6 +1,6 @@
 .background-carousel-container {
   width: 100%;
-  height: 750px;
+  height: 100%;
   position: relative;
 
   .background-carousel {
