--- a/src/components/pages/Calculator/CalcPreview/PanelPreview/panels/PanelBarcelonaRamen/PanelBarcelonaRamen.scss
+++ b/src/components/pages/Calculator/CalcPreview/PanelPreview/panels/PanelBarcelonaRamen/PanelBarcelonaRamen.scss
@@ -37,7 +37,7 @@
     background: #563828;
     width: 100%;
     z-index: 2;
-    border-bottom: 1px solid black
+    border-bottom: 1px solid black;
   }
 
   .panel-barcelona-ramen-bottom {
@@ -73,5 +73,17 @@
 
     position: relative;
     background: rgba(65, 40, 25, 1);
+  }
+
+  .panel-barcelona-ramen-lamella-container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 26px;
   }
 }
