--- a/src/components/pages/Contact/Contact.scss
+++ b/src/components/pages/Contact/Contact.scss
@@ -3,7 +3,7 @@
   color: white;
 
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   padding: 100px 100px 40px 100px;
 
   display: flex;
@@ -21,6 +21,7 @@
   .contact-page--content {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
   }
 
   a {
@@ -28,5 +29,11 @@
     margin: 16px 0;
     display: block;
     text-decoration: none;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .contact-page {
+    padding: 90px 10px 40px 10px;
   }
 }
