--- a/src/components/pages/Products/TabPanelArticle/TabPanelArticle.scss
+++ b/src/components/pages/Products/TabPanelArticle/TabPanelArticle.scss
@@ -2,9 +2,10 @@
   display: flex;
 
   min-width: 400px;
-  width: 100%;
+  flex: 1;
   max-width: 600px;
-  padding-right: 25px;
+  padding: 25px;
+  justify-content: center;
 
   .article-inner-container {
     flex-direction: column;
@@ -12,11 +13,9 @@
     padding: 10px;
 
     img {
-      max-width: 500px;
-      max-height: 300px;
-      width: 510px;
-      height: 260px;
-      margin: 5px;
+      height: 50%;
+      width: 100%;
+      object-fit: cover;
     }
 
     h2 {
