--- a/src/components/pages/Calculator/Calculator.scss
+++ b/src/components/pages/Calculator/Calculator.scss
@@ -10,7 +10,8 @@
     display: flex;
     flex: 1;
     padding-top: 20px;
-    overflow: hidden;
+    overflow: auto;
+    flex-wrap: wrap;
   }
 
   .calculator-page-title {
@@ -21,5 +22,8 @@
   .calculator-side-wrapper {
     display: flex;
     flex-direction: column;
+    flex: 1;
+    min-width: 300px;
+    position: relative;
   }
 }
