--- a/src/components/pages/SinglePage/SinglePage.scss
+++ b/src/components/pages/SinglePage/SinglePage.scss
@@ -1,5 +1,5 @@
 .single-page-container {
-  padding: 100px 100px 40px 100px;
+  padding: 100px 100px 0px 100px;
 
   .single-page-container__content {
     margin-top: 50px;
@@ -38,24 +38,29 @@
       display: flex;
       flex-direction: row;
       margin-bottom: 100px;
+      flex-wrap: wrap;
 
       > :first-child {
         margin-right: 30px;
       }
 
-      img {
-        flex: 1;
-        max-width: 550px;
-        max-height: 300px;
-      }
+      // img {
+      //   flex: 1;
+      //   max-width: 550px;
+      //   max-height: 300px;
+      // }
 
       .detail-row__content-container {
         display: flex;
         flex-direction: column;
         flex: 1;
 
+        min-width: 300px;
+        max-width: 500px;
+
         h2 {
           text-align: left;
+          margin-top: 0px;
           margin-bottom: 15px;
           font-size: 30px;
           font-weight: bold;
@@ -75,6 +80,7 @@
           display: flex;
           cursor: pointer;
           text-decoration: none;
+          margin-top: 10px;
 
           .detail-row_content-calculator__container {
             margin-top: 10px;
@@ -96,11 +102,22 @@
             padding: 3px 10px;
           }
         }
+
+        img {
+          margin-top: 20px;
+          width: 100%;
+        }
       }
     }
   }
 
   .MuiGridListTile-tile {
     max-width: 600px;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .single-page-container {
+    padding: 90px 10px 0px 10px;
   }
 }
